@startuml patron-dao-persistencia
hide empty members

class TicTacToeApp {
  {static} +main(String[])
}
enum PersistenceType {
  IN_MEMORY
  FILE
  JSON
  SQLITE
  {abstract} +createDaoFactory(): DaoFactory
}

interface DaoFactory {
  +createGameDao(): GameDao
  +createStatisticsDao(): StatisticsDao
}
class InMemoryDaoFactory
class FileDaoFactory
class JsonDaoFactory
class SqliteDaoFactory

interface GameDao {
  +nextId(): int
  +save(GameSnapshot)
  +findAll(): List<GameSnapshot>
}
interface StatisticsDao {
  +load(): Optional<StatisticsDto>
  +save(StatisticsDto)
}

TicTacToeApp ..> PersistenceType : SQLITE.createDaoFactory()
TicTacToeApp --> DaoFactory : daoFactory (variable local)
PersistenceType ..> DaoFactory : createDaoFactory()
DaoFactory <|.. InMemoryDaoFactory
DaoFactory <|.. FileDaoFactory
DaoFactory <|.. JsonDaoFactory
DaoFactory <|.. SqliteDaoFactory
FileDaoFactory ..> GameDao : createGameDao()
FileDaoFactory ..> StatisticsDao : createStatisticsDao()

abstract class AbstractFileDao<T> {
  -codec: FileCodec<T>
  #readOrDefault(T): T
  #write(T)
}
interface FileCodec<T> {
  +read(Path): T
  +write(Path, T)
}
class GsonCodec
class ObjectStreamCodec
abstract class AbstractGameFileDao
abstract class AbstractStatisticsFileDao
class FileGameDao
class JsonGameDao
class FileStatisticsDao
class JsonStatisticsDao

AbstractFileDao o-> FileCodec : codec
FileCodec <|.. GsonCodec
FileCodec <|.. ObjectStreamCodec
AbstractFileDao <|-- AbstractGameFileDao
AbstractFileDao <|-- AbstractStatisticsFileDao
GameDao <|.. AbstractGameFileDao
StatisticsDao <|.. AbstractStatisticsFileDao
AbstractGameFileDao <|-- FileGameDao
AbstractGameFileDao <|-- JsonGameDao
AbstractStatisticsFileDao <|-- FileStatisticsDao
AbstractStatisticsFileDao <|-- JsonStatisticsDao

class SqliteGameDao
class SqliteStatisticsDao
class SqliteSupport {
  {static} +withConnection(Path, SqlFunction<T>): T
  {static} +inTransaction(Path, SqlAction)
}
GameDao <|.. SqliteGameDao
StatisticsDao <|.. SqliteStatisticsDao
SqliteGameDao ..> SqliteSupport
SqliteStatisticsDao ..> SqliteSupport

class GameSnapshotService {
  -gameDao: GameDao
}
class StatisticsService {
  -statisticsDao: StatisticsDao
}
GameSnapshotService o-> GameDao
StatisticsService o-> StatisticsDao

class GameRegistry {
  +GameRegistry(GameDao)
}
class Statistics {
  +Statistics(StatisticsDao)
}
GameRegistry o-> GameSnapshotService
Statistics o-> StatisticsService
TicTacToeApp ..> GameRegistry : new(daoFactory.createGameDao())
TicTacToeApp ..> Statistics : new(daoFactory.createStatisticsDao())

note bottom of DaoFactory
  Abstract Factory — cada PersistenceType
  produce una familia consistente de
  GameDao + StatisticsDao (misma tecnología)
end note

note bottom of FileCodec
  Strategy — FileGameDao usa ObjectStreamCodec,
  JsonGameDao usa GsonCodec; AbstractFileDao
  no sabe cuál (Template Method: readOrDefault/
  write delegan la serialización real al codec)
end note

note bottom of SqliteSupport
  Extract Method — centraliza apertura/cierre
  de Connection y commit/rollback de transacción,
  antes duplicado en SqliteGameDao y
  SqliteStatisticsDao
end note

note bottom of GameSnapshotService
  Capa de servicio, encapsulada dentro de
  GameRegistry/Statistics — nadie fuera de
  ellos toca el DAO ni el Service directamente
end note

note bottom of GameRegistry
  Ya NO es Singleton (hasta el refactor de
  2026-07-10 tenía getInstance() y llamaba
  internamente a un holder estático Persistence,
  hoy eliminado). Se construye una única vez en
  TicTacToeApp.main() y se inyecta por constructor
  hacia LoadModule/GameModule/StatisticsModule.
  Ver .agents/steering/05-pattern-gates.md
end note
@enduml
